--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
@@ -23,6 +24,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.441.0",
     "next": "^15.4.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
