--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.441.0",
+    "motion": "^12.23.26",
     "next": "^15.4.3",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
