refactor: add brand identity

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_GOOGLE_SHEET_ENDPOINT=""
+NEXT_PUBLIC_INSTAGRAM_URL=""
+NEXT_PUBLIC_FACEBOOK_URL=""
+NEXT_PUBLIC_TWITTER_URL=""
+NEXT_PUBLIC_LINKEDIN_URL=""
+NEXT_PUBLIC_TALLY_FORM_URL=""
