--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_INSTAGRAM_URL="https://instagram.com/hiredue"
 NEXT_PUBLIC_FACEBOOK_URL="https://facebook.com/hiredue"
 NEXT_PUBLIC_TWITTER_URL="https://twitter.com/hiredue"
 NEXT_PUBLIC_LINKEDIN_URL="https://linkedin.com/company/hiredue"
+NEXT_PUBLIC_TALLY_FORM_URL="https://tally.so/r/68L6EN"
